[package]
name = "docker-limit"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json","blocking"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.35" 
log = "0.4.11"
pretty_env_logger = "0.4.0"